# web-tc24r

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.agentrail/: instruction-lock.toml  saga.toml
.agentrail/sessions/: 293ac6b7-f21d-4bba-be11-81a435c0292b.jsonl  d8a64eb2-0597-4fa0-94f3-d2737b11d2aa.jsonl  f108d9ab-f609-4428-ba70-6f4783a52d81.jsonl
.agentrail/steps/002-embed-tc24r/: step.toml  summary.md
.agentrail/steps/003-editor/: step.toml  summary.md
.agentrail/steps/004-compile-run/: step.toml  summary.md
.agentrail/steps/005-output-display/: step.toml
pages/: index.html  web-tc24r-136357c92968de0e_bg.wasm  web-tc24r-4f5fd8230f55bb2f.js  web-tc24r-4f5fd8230f55bb2f_bg.wasm  web-tc24r-50a056293137bfc5_bg.wasm  web-tc24r-70b2de294048708_bg.wasm  web-tc24r-86224b584fa53ddf_bg.wasm  web-tc24r-970b40be5500fdbd_bg.wasm  web-tc24r-e5aad09a2336c0d6.js  web-tc24r-e5aad09a2336c0d6_bg.wasm
src/: compiler.rs  editor.rs  highlight.rs  main.rs
