[package]
name = "web-tc24r"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.5", features = ["http"] }
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlTextAreaElement"] }

# tc24r compiler pipeline (C → COR24 assembly)
tc24r-span = { path = "../tc24r/components/core/crates/tc24r-span" }
tc24r-preprocess = { path = "../tc24r/components/frontend/crates/tc24r-preprocess" }
tc24r-lexer = { path = "../tc24r/components/frontend/crates/tc24r-lexer" }
tc24r-parser = { path = "../tc24r/components/frontend/crates/tc24r-parser" }
tc24r-codegen = { path = "../tc24r/components/backend/crates/tc24r-codegen" }

# cor24 assembler + emulator (assembly → machine code → execution)
cor24-emulator = { path = "../../sw-embed/cor24-rs", default-features = false }
